Fix sticky banner z-index bug with mobile navi

--- a/styles/_navi.scss
+++ b/styles/_navi.scss
@@ -3,7 +3,7 @@
   position: relative;
   z-index: $navi-index;
 
-  @media (max-width: $width-tablet-2) {
+  &.mobile.active {
     z-index: $navi-index + 2;
   }
 
